@@ -1,26 +1,27 @@
 package com.ecommerce.spring_ecommerce.service;
 
-import com.ecommerce.spring_ecommerce.exceptions.APIException;
 import com.ecommerce.spring_ecommerce.model.Category;
+import com.ecommerce.spring_ecommerce.payload.CategoryDTO;
+import com.ecommerce.spring_ecommerce.payload.CategoryResponse;
 import com.ecommerce.spring_ecommerce.repository.CategoryRepository;
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import org.mockito.InjectMocks;
-import org.mockito.Mock;
-import org.mockito.MockitoAnnotations;
+import org.mockito.*;
+import org.modelmapper.ModelMapper;
 
-import java.util.Collections;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
-
 class CategoryServiceImplTest {
     @Mock
     private CategoryRepository categoryRepository;
+
+    @Spy
+    private ModelMapper modelMapper;
 
     @InjectMocks
     private CategoryServiceImpl categoryService;
@@ -42,35 +43,46 @@ class CategoryServiceImplTest {
         List<Category> mockCategories = List.of(new Category(1L, "Electronics"), new Category(2L, "Books"));
         when(categoryRepository.findAll()).thenReturn(mockCategories);
 
-        List<Category> result = categoryService.getAllCategories();
+        CategoryResponse result = categoryService.getAllCategories();
 
-        assertEquals(mockCategories, result);
+        assertEquals(2, result.getContent().size());
     }
 
     @Test
     void getAllCategoriesReturnsEmptyList() {
-        when(categoryRepository.findAll()).thenReturn(Collections.emptyList());
+        when(categoryRepository.findAll()).thenReturn(List.of());
 
-        List<Category> result = categoryService.getAllCategories();
+        CategoryResponse result = categoryService.getAllCategories();
 
-        assertTrue(result.isEmpty());
+        assertTrue(result.getContent().isEmpty());
     }
 
     @Test
     void createCategorySuccessfullyCreatesCategory() {
-        Category mockCategory = new Category(null, "Electronics");
-        when(categoryRepository.findByCategoryName(mockCategory.getCategoryName())).thenReturn(null);
+        CategoryDTO mockCategoryDTO = new CategoryDTO(null, "Electronics");
+        Category savedMockCategory = new Category(1L, "Electronics");
 
-        categoryService.createCategory(mockCategory);
-        verify(categoryRepository).save(mockCategory);
+        when(categoryRepository.findByCategoryName(mockCategoryDTO.getCategoryName())).thenReturn(null);
+        when(categoryRepository.save(Mockito.any())).thenReturn(savedMockCategory);
+
+        CategoryDTO savedCategoryDTO = this.categoryService.createCategory(mockCategoryDTO);
+        verify(categoryRepository).save(Mockito.any());
+        assertEquals(savedMockCategory.getCategoryName(), savedCategoryDTO.getCategoryName());
+
+
     }
 
     @Test
     void createCategoryThrowsExceptionIfNameExists() {
-        Category mockCategory = new Category(null, "Electronics");
-        when(categoryRepository.findByCategoryName("Electronics")).thenReturn(mockCategory);
+        CategoryDTO mockCategoryDTO = new CategoryDTO(1L, "Electronics");
+        Category mockCategory = new Category(1L, "Electronics");
 
-        assertThrows(APIException.class, () -> categoryService.createCategory(mockCategory));
+        when(modelMapper.map(mockCategoryDTO, Category.class)).thenReturn(mockCategory);
+        when(modelMapper.map(mockCategory, CategoryDTO.class)).thenReturn(mockCategoryDTO);
+        when(categoryRepository.findByCategoryName(mockCategoryDTO.getCategoryName())).thenReturn(mockCategory);
+
+
+        assertThrows(Exception.class, () -> categoryService.createCategory(mockCategoryDTO));
     }
 
 }
